pyglet 1.5.1
Bugfix and Maintenance release

Bugfixes
--------
- Fix issue with changing Label positions by fractional values.
- Avoid performance issue due to unnecessary context switching with single Window programs.
- Fix crash on Player.next_source when playing video has no audio track.

Changes
--------
- text.TextLayouts are no longer bound to int positioning.


pyglet 1.5.0
Bugfix and Maintenance release

Bugfixes
--------
- Removed global dubug function access in __del__ methods to prevent smooth shutdown.
- Fix regression not allow SourceGroups to be queued on Player objects. (#140)

Changes
-------
- Support for Python 2 has been dropped. Python 3.5 is now the minimum supported version.


pyglet 1.4.10
Bugfix release

Bugfixes
--------
- Explicitly set Window size in game example. (#116)
- Prevent crash when checking if FFMpeg is available. (#121)


pyglet 1.4.9
Bugfix and small improvement release

Bugfixes
--------
- Fix TextLayoutGroup consolidation when using custom Groups for Labels.
- FFmpeg: Cast 'date' to string instead of int in file_info. (#109)
- Fix ctypes error caused by incorrectly specifying a Union as an argtype. (#112)

Improvements
------------
- Added a simple 2D Camera example to examples/camera.py in the repository.
- OSX: OpenGL context creation is more lenient with requested versions.


pyglet 1.4.8
Bugfix release

Bugfixes
--------
- FFmpeg: fix an occasional crash during seek operation.
- Revert Event Dispatcher changes from v1.4.7 due to possible bug.
- Linux: Warn on failure to set vsync, instead of crashing.


pyglet 1.4.7
Bugfix and small improvement release

Bugfixes
--------
- Allow creation of non-power-of-two compressed Textures. (#78)
- Fix EventDispatchers surpressing `AttributeError`s. (#87)
- Fix external lib loading on Windows under Python 3.8. (#90)

Improvements
------------
- Windows: Add support for `Desktop Window Manager` composition for smoother rendering.