@@ -5,11 +5,12 @@ Bugfixes
 --------
 - Fix issue with changing Label positions by fractional values.
 - Avoid performance issue due to unnecessary context switching with single Window programs.
-- Fix crash on Player.next_source when playing video has no audio track.
+- Fix crash on Player.next_source when playing a video with no audio track.
 
 Changes
 --------
 - text.TextLayouts are no longer bound to int positioning.
+- Raise exception if attempting to import from legacy Python.
 
 
 pyglet 1.5.0
